--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
  - sudo apt-get install qt5-default qttools5-dev-tools
 script:
  - qmake -v
+ - man qmake | grep '\-r'
  - qmake -r
  - cd tests/
  - qmake -project
